[tool.poetry]
name = "python-academia"
version = "0.1.0"
description = ""
authors = ["siobhanmt3 <martinezsiobhan0@gmail.com>"]
readme = "README.md"
packages = [{include = "python_academia"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
